# fft992

./: CMakeLists.txt  README.md
cmake/: fft992-config.cmake.in  fft992_validate_downstream.cmake
examples/: batch_fft_bluestein_fft_contiguous.F90  batch_fft_bluestein_field_contiguous.F90  batch_fft_fft992_fft_contiguous.F90  batch_fft_fft992_field_contiguous.F90  fft992_example.F90  simple_bluestein.F90  simple_fft992.F90  single_fft_bluestein.F90  single_fft_fft992.F90
examples/fft992_downstream/: CMakeLists.txt  bluestein_mod_smoke.F90  fft992_mod_smoke.F90
src/fft992/: bluestein_mod.F90  fft992_mod.F90
src/fft992/internal/: bluestein_dp_smod.F90  bluestein_impl.F90  bluestein_prec_mod.F90  bluestein_sp_smod.F90  fft992_cc.F90  fft992_dp_smod.F90  fft992_impl.F90  fft992_sp_smod.F90  set99b.F90
src/fiat_dummy/: abor1.F90  abor1.intfb.h  yomhook.F90
